# data_extractor

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.md  HISTORY.md  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  api_abc.html  api_exceptions.html  api_item.html  api_json.html  api_lxml.html  api_reference.html  api_utils.html  default.nix  flake.nix  genindex.html  index.html  mypy_plugin.py  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstarts.html  requirements-dev.txt  requirements-docs.txt  requirements-mini.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  release.yml  test.yml
data_extractor/: __init__.py  abc.py  core.py  exceptions.py  html.py  item.py  json.py  lxml.py  utils.py
data_extractor/contrib/mypy/: __init__.py
data_extractor/plugins/: mypy_plugin.py
docs/source/: api_abc.rst  api_core.rst  api_exceptions.rst  api_item.rst  api_json.rst  api_lxml.rst  api_reference.rst  api_utils.rst  changelog.rst  conf.py  contributing.rst  history.rst  index.rst  installation.rst  quickstarts.rst  readme.rst
docs/source/_static/: custom.css
docs/source/howto/: index.rst  item.rst  json.rst  lxml.rst
scripts/: build_readme.py  export_requirements_txt.py  requirements-dev.txt  requirements-docs.txt  requirements.txt
scripts/requirements/: requirements-dev.txt  requirements-docs.txt  requirements.txt
tests/: __init__.py  conftest.py  mypy.cfg  mypy.ini  test_exceptions.py  test_extractor.py  test_extractor_with_lxml.py  test_generic_item.py  test_html.py  test_item.py  test_item_with_generic.py  test_json.py  test_lxml.py  test_utils.py  utils.py
tests/assets/: sample-rss-2.xml
tests/typesafety/: conftest.py  test_extracted_typed_dict.yml  test_field.yml  test_generic.yml  test_mypy_plugin.py
