[project]
name = "data_extractor"
version = {use_scm = true}
authors = [
    {name = "林玮 (Jade Lin)", email = "linw1995@icloud.com"},
]
description = "Combine XPath, CSS Selectors and JSONPath for Web data extracting."
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["data-extractor", "data-extraction", "xpath", "css-selectors", "jsonpath"]
dependencies = [
    "typing-extensions ~= 3.7",
]
requires-python = ">=3.7"
license = {text = "MIT"}
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/linw1995/data_extractor"
repository = "https://github.com/linw1995/data_extractor"
documentation = "https://data-extractor.readthedocs.io/en/latest/"

[project.optional-dependencies]
lxml = [
     "lxml >= 4.3, < 5",
]
cssselect = [
     "lxml >= 4.3, < 5",
     "cssselect >= 1.0.3, < 2",
]
jsonpath-extractor = [
     "jsonpath-extractor >= 0.5, < 0.8",
]
jsonpath-rw = [
     "jsonpath-rw >= 1.4, < 2",
]
jsonpath-rw-ext = [
     "jsonpath-rw >= 1.4, < 2",
     "jsonpath-rw-ext >= 1.2, < 2",
]

[tool.pdm]
includes = ["data_extractor/*.py", "data_extractor/py.typed"]

[tool.pdm.dev-dependencies]
docs = [
     "lxml >= 4.3, < 5",
     "cssselect >= 1.0.3, < 2",
     "jsonpath-extractor >= 0.5, < 0.8",
     "jsonpath-rw >= 1.4, < 2",
     "jsonpath-rw-ext >= 1.2, < 2",
     "sphinx >= 2.2, < 3"
]
build_readme = [
    "click >= 7.1.2, < 8",
    "docutils >= 0.16",
    "pygments ~= 2.8",
]
test = [
    "pytest >= 6, < 7",
    "pytest-cov >= 2.7.1, < 3",
    "pytest-mypy-plugins ~= 1.6",
]

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.0"
tag_format = "v$version"
